feat(device) detect brand Lenovo model: Tab P11 Plus (TB-J616X) feat(device) detect brand Ramos model: W22 Pro 3G feat(device) detect brand bq model: Trend (2021) (BQ-5560L) feat(device) detect brand Wiko model: Ride 3 (U614AS) feat(device) detect brand Vivo models: Y20A (V2052), Y73 (2021) (V2059), X70 Pro+ (V2145A), iQOO Z5 (V2148A)
feat(device) added test for brand Samsung model: Galaxy A02s (SM-A025U1)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3327,7 +3327,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[13]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V2053)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)| 4G_r))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V2085A|V202[0345]C?A|V202[2-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V2036_21|V204[013]|V204[6789]A|V205[0458]|V206[015689]|V20(?:6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V2118A|V2045|V2031_21|V2043_21|V213[346]A|V214[1358]A|I1928|V21[12]1A|V2106A|V2109|V211[01]|V2123A|V2026_21|V210[25]|V205[239])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3362,6 +3362,8 @@ Vivo:
       model: 'iQOO Z3'
     - regex: 'V1919A(?:[);/ ]|$)'
       model: 'iQOO Z5x'
+    - regex: 'V2148A(?:[);/ ]|$)'
+      model: 'iQOO Z5'
     - regex: 'V2023A(?:[);/ ]|$)'
       model: 'iQOO U1'
     - regex: 'V2065A(?:[);/ ]|$)'
@@ -3528,6 +3530,8 @@ Vivo:
       model: 'X60 Pro Plus'
     - regex: '(?:V2134A|V2105)(?:[);/ ]|$)'
       model: 'X70 Pro'
+    - regex: 'V2145A(?:[);/ ]|$)'
+      model: 'X70 Pro+'
     - regex: 'V2133A(?:[);/ ]|$)'
       model: 'X70'
     - regex: 'X([0-9])Plus(?: A)?(?:[);/ ]|$)'
@@ -3556,7 +3560,7 @@ Vivo:
       model: 'Y25'
     - regex: 'V2043_21(?:[);/ ]|$)'
       model: 'Y20 (2021)'
-    - regex: 'V2054(?:[);/ ]|$)'
+    - regex: 'V205[24](?:[);/ ]|$)'
       model: 'Y20A'
     - regex: 'V2037(?:[);/ ]|$)'
       model: 'Y20G'
@@ -3634,6 +3638,8 @@ Vivo:
       model: 'Y71i'
     - regex: 'V1731CA(?:[);/ ]|$)'
       model: 'Y73'
+    - regex: 'V2059(?:[);/ ]|$)'
+      model: 'Y73 (2021)'
     - regex: 'V2031A(?:[);/ ]|$)'
       model: 'Y73s'
     - regex: 'V1913[AT](?:[);/ ]|$)'
@@ -4065,6 +4071,8 @@ bq:
       model: 'Prague'
     - regex: 'BQ-5009L(?:[);/ ]|$)'
       model: 'Trend'
+    - regex: 'BQ-5560L'
+      model: 'Trend (2021)'
     - regex: 'BQS-500[59](?:[);/ ]|$)'
       model: 'Sydney'
     - regex: 'BQ-5008L(?:[);/ ]|$)'
@@ -10210,6 +10218,8 @@ Lenovo:
       device: 'tablet'
     - regex: 'TB-J606[LF](?:[);/ ]|$)'
       model: 'Tab P11'
+    - regex: 'TB-J616[XF](?:[);/ ]|$)'
+      model: 'Tab P11 Plus'
       device: 'tablet'
     - regex: 'TB-J706[LF](?:[);/ ]|$)'
       model: 'Tab P11 Pro'
@@ -16849,7 +16859,7 @@ Quechua:
 
 # Ramos
 Ramos:
-  regex: 'Ramos ?([^/);]+)(?: Build|[);])|MOS1(?:max)?(?:[);/ ]|$)'
+  regex: 'Ramos ?([^/);]+)(?: Build|[);])|(?:MOS1(?:max)?|W22PRO 3G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Ramos[ _])?(R10|R9|M7)(?:[);/ ]|$)'
@@ -16858,6 +16868,9 @@ Ramos:
       model: '$1'
     - regex: 'MOS1max'
       model: 'MOS1 Max'
+    - regex: 'W22PRO 3G'
+      device: 'tablet'
+      model: 'W22 Pro 3G'
     - regex: 'Ramos ?([^/;]+)(?: Build|[);])'
       device: 'tablet'
       model: '$1'
@@ -18984,7 +18997,7 @@ Wink:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610|K211)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|T[HV])|WIM Lite|W-V851|W-K360-TV|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna|lPlus)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?! Plus)(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 (?:Go|Plus)|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V745|V8[30]0|P[36]11|K420|K510S?|K560|K130|K380|K610|K211)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|T[HV])|WIM Lite|W-V851|W-K360-TV|W-V6[08]0|W-V750BN|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913|U614AS'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?W-V745'
@@ -19185,9 +19198,9 @@ Wiko:
       model: 'Ride'
     - regex: 'U520AS(?:[);/ ]|$)'
       model: 'Ride 2'
-    - regex: 'Wiko ([^/;]+) Build'
-      model: '$1'
-    - regex: 'Wiko ([^/; ]+)'
+    - regex: 'U614AS(?:[);/ ]|$)'
+      model: 'Ride 3'
+    - regex: 'Wiko ([^/;)]+)(?: Build|[;)])'
       model: '$1'
 
 # Wieppo
