--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4984,10 +4984,10 @@ CUBOT:
       model: 'King Kong Mini 2'
     - regex: 'KINGKONG_MINI'
       model: 'King Kong Mini'
-    - regex: 'KING[_ ]?KONG[_ ]([357])'
-      model: 'King Kong $1'
     - regex: 'KINGKONG 5 Pro'
       model: 'King Kong 5 Pro'
+    - regex: 'KING[_ ]?KONG[_ ]([357])'
+      model: 'King Kong $1'
     - regex: 'KING KONG CS'
       model: 'King Kong CS'
     - regex: 'KING KONG'
@@ -10217,6 +10217,7 @@ Lenovo:
       model: 'Tab P10'
       device: 'tablet'
     - regex: 'TB-J606[LF](?:[);/ ]|$)'
+      device: 'tablet'
       model: 'Tab P11'
     - regex: 'TB-J616[XF](?:[);/ ]|$)'
       model: 'Tab P11 Plus'
@@ -11534,7 +11535,7 @@ Maze Speed:
 
 # Maze (mazephone.com)
 Maze:
-  regex: '(?:Alpha[_ ]X|Maze Alpha)(?:[);/ ]|$)|(?:Blade|Comet)(?: Build|[;)])'
+  regex: '(?:Alpha[_ ]X|Maze Alpha)(?:[);/ ]|$)|(?:Android [78].+ Blade|Comet)(?: Build|[;)])'
   device: 'smartphone'
   models:
     - regex: 'Alpha[_ ]X(?:[);/ ]|$)'
@@ -13657,7 +13658,7 @@ OPPO:
     - regex: '(?:OPPO[ _]?)?CPH1717(?:[);/ ]|$)'
       model: 'A71'
     - regex: '(?:OPPO[ _]?)?CPH1801(?:[);/ ]|$)'
-      model: 'a71 (2018)'
+      model: 'A71 (2018)'
     - regex: '(?:OPPO[ _]?)?(?:PDY[TM]20|CPH2067)(?:[);/ ]|$)'
       model: 'A72'
     - regex: 'CPH(?:2161|2099)(?:[);/ ]|$)'
@@ -13984,7 +13985,7 @@ Oukitel:
       model: 'K7 Power'
     - regex: '(Y4800|K10000|K[4-8]000|WP5000|[CU]2|U10|C19|C22)(?:[);/ ]|$)'
       model: '$1'
-    - regex: ' (WP(?:[25-79]|1[02357])|C11_F)(?:[);/ ]|$)'
+    - regex: '(?:OUKITEL)? (WP\d+|C11_F)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'OUKITEL; ([^;]+);'
       model: '$1'
