--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -3087,3 +3087,21 @@
     model: ""  # lenoveo G700?
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; MZ-Fast Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/45.0.2454.94 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 45.0.2454.94
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: "" # beeline ?
+    model: ""
+  os_family: Android
+  browser_family: Chrome
