feat(device) detect brand Xiaomi model: Redmi 9C NFC, Redmi 8A Dual feat(device) added test for brand Xiaomi models: Redmi 9C, Redmi 9A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19461,6 +19461,8 @@ Xiaomi:
       model: 'Redmi 1S'
     - regex: 'HM 1(?:[);/ ]|$)'
       model: 'Redmi 1'
+    - regex: 'Redmi 8A Dual(?:[);/ ]|$)'
+      model: 'Redmi 8A Dual'
     - regex: 'M2004J7AC(?:[);/ ]|$)'
       model: 'Redmi 10X'
     - regex: '(?:M2004J19C|M2006C3MII|lancelot|galahad)(?:[);/ ]|$)'
@@ -19477,7 +19479,7 @@ Xiaomi:
       model: 'Redmi 9AT'
     - regex: '(?:M2010J19S[GYL]|pomelo)(?:[);/ ]|$)'
       model: 'Redmi 9T'
-    - regex: 'M2006C3MNG(?:[);/ ]|$)'
+    - regex: '(?:M2006C3MNG|Redmi 9C NFC)(?:[);/ ]|$)'
       model: 'Redmi 9C NFC'
     - regex: '21061119[AD]G(?:[);/ ]|$)'
       model: 'Redmi 10'
