--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -1907,3 +1907,74 @@
     model: M2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; uz-uz; Redmi 9C NFC Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.16.2-gn
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.16.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Redmi 9C NFC
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; uz-uz; Redmi 9C Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.15.2-gn
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.15.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Redmi 9C
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; ru-ru; Redmi 9A Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/94.0.4606.61 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.11.4-gn
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.11.4
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Redmi 9A
+  os_family: Android
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; ru-ru; Redmi 8A Dual Build/QKQ1.191014.001) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.16.2-gn
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.16.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Xiaomi
+    model: Redmi 8A Dual
+  os_family: Android
+  browser_family: Android Browser
