--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,11 +24,13 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest]
-        php-version: ['7.2', '8.0']
+        php-version: ['7.2', '8.1']
         include:
           - php-version: 7.3
             operating-system: ubuntu-latest
           - php-version: 7.4
+            operating-system: ubuntu-latest
+          - php-version: 8.0
             operating-system: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +55,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [macOS-latest]
-        php-version: [ '7.2', '8.0' ]
+        php-version: [ '7.2', '8.1' ]
     steps:
       - uses: actions/checkout@v2
       - name: Install PHP
