--- a/Tests/fixtures/smartphone-28.yml
+++ b/Tests/fixtures/smartphone-28.yml
@@ -1960,6 +1960,7 @@
     brand: Xiaomi
     model: Redmi 9A
   os_family: Android
+  browser_family: Android Browser
 -
   user_agent: Mozilla/5.0 (Linux; U; Android 10; ru-ru; Redmi 8A Dual Build/QKQ1.191014.001) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.16.2-gn
   os:
